service.app.yaml
apiVersion: v1
kind: Service
metadata:
  name: echotab
spec:
  ports:
  - port: 80
    targetPort: 5678
  selector:
    app: echotab
