ingress.app.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: echo-ingress
spec:
  rules:
  - http:
      paths:
      - backend:
          serviceName: echotab
          servicePort: 80
